# Parla.py

./: .gitignore  .gitmodules  Gergo.md  LICENSE.txt  Parla.md  Pipfile  README.md  Types.md  cache_filler.c  dask-requirements.txt  dask_env.yml  parla_env.yml  requirements.txt  setup.py
.github/workflows/: main.yml
artifact/: README.md
artifact/cublasmg/cudalibmg/samples/: CMakeLists.txt  Findcudalibmg.cmake  README.md
artifact/cublasmg/cudalibmg/samples/matrixDescriptor/: CMakeLists.txt  matrixDescriptor.cu
artifact/cublasmg/cudalibmg/samples/redistribute/: CMakeLists.txt  redistribute.cu
benchmarks/: README.md  blocked_cholesky.py  dask_cholesky.py  fox.py  inner.py  inner_mpi.py  jacobi.py  test_data.py
benchmarks/arpack/: arpack_import.py  arpack_mpi.py  arpack_parallel.py  arpack_reference.py  arpack_reference_basic.py  arpack_vec_import.py
benchmarks/gpu_threading/: README.md  build_cython.sh  mpi.py  mpi_cupy.py  multithread_kokkos.py  multithread_novecs.py  test_cuda_copy.cpp
benchmarks/kokkos_example/: build_cython.sh
benchmarks/nbody/: README.md
benchmarks/qr_factorization/: README.md  experiment.sbatch  my_sbatch.bash  qr_cupy.py  qr_dask.py  qr_multithread.py  qr_numpy.py  qr_parla.py  qr_simple_blocked.py  qr_vec.py  simply_multithread.py  testing_dgeqrf_mgpu.cpp
benchmarks/sweeps/: sweeps_numba_sgpu.py
benchmarks/threading_test/: build_kokkos.sh  gpu_setup.py  multithread_cupy.py  multithread_vecs.py  no_thread.py  no_vec.py
benchmarks/vec_matmuls/: README.md  matmul_multithread.py  matmul_scaling_test.py  matmul_simple.py  matmul_vec.py
conda_recipe/: meta.yaml
docs/: Makefile  README.md
docs/source/: conf.py  examples.rst  ffi.rst  index.rst  parla.array.rst  parla.detail.rst  parla.device.rst  parla.function_decorators.rst  parla.ldevice.rst  parla.loops.rst  parla.memory.rst  parla.partitioning.rst  parla.primitives.rst  parla.struct.rst  parla.tasks.rst  prototype.rst  todos.rst
examples/: ILU_preconditioned_conjugate_gradient.py  README.md  arpack_mpi.py  arpack_parallel.py  arpack_reference.py  arpack_reference_basic.py  artifact_commands.md  artifact_gather.py  artifact_launcher.py  blocked_cholesky.py  blocked_cholesky_cpu_blas.py  blocked_cholesky_gpu.py  blocked_cholesky_multigpu.py  blocked_cholesky_multigpu_separate_task.py  blocked_cholesky_parray.py  blocked_debug.py  commands.md  conjugate_gradient.py  exp.py  fox.py  fox_mpi.py  inner.py  jacobi.py  kmeans_plusplus.py  launcher.py  matmul.py  matmul_automove.py  matmul_automove_no_dep.py  matmul_explicitmove.py  matmul_future.py  matmul_manual_no_dep.py  multiload.py  quicksort.py  quicksort_optimized.py  run_app.py  source.sh  test_data.py  test_script.py  tree.py
examples/TSQR/: README.md  experiment.sbatch  qr_multithread.py  qr_parla.py  qr_vec.py
examples/VEC/: multiload.py
examples/backup/: README.md  simple_two_tasks.py
examples/cholesky/: blocked_cholesky_automatic.py  blocked_cholesky_cpu.py  blocked_cholesky_gpu.py  blocked_cholesky_manual.py  blocked_cholesky_parray.py  blocked_cholesky_theoretical_time.py  cholesky_cpu_blas.py  daks_cpu_cholesky_pure.py  dask_cholesky.py  dask_cpu_cholesky.py  dask_gpu_cholesky.py  make_cholesky_input.py
examples/galois_multiload_example/: .gitignore  Makefile  README.md  galois_bfs_multiload.py  galois_bfs_sharegraph_test.py  galois_bfs_test.py  galois_bfs_threads.py  multiload_galois.py  run_vec.sh  setup.py  test.cpp  test.txt  timer.py
examples/galois_multiload_example/parla_galois/: CMakeLists.txt  Makefile  bfs_cpp.cpp  bfs_cpp.cpp_no_slots  core.pxd  core.pyx
examples/jacobi/: jacobi_automatic.py  jacobi_manual.py  jacobi_test_parray.py
examples/kmeans/: kmeans_plusplus.py  kmeans_plusplus_manual.py
examples/kokkos/: README.md  build_kokkos.sh  cpu_n_setup.py  gpu_n_setup.py  run.py
examples/kokkos_example/: README.txt  example_output.txt
examples/kokkos_multiload_example/: README.md  build_cython.sh  build_kokkos.sh  cpu_setup.py  gpu_setup.py  multiload_kokkos.py  multithread_kokkos.py  test_mpi.py  test_shared_mpi.py
examples/matmul/: matmul.py  matmul_automatic.py  matmul_automove_no_dep.py  matmul_automove_part.py  matmul_cpu.py  matmul_manual.py  matmul_manual_no_dep.py
examples/microbench/: import.time  reference.time  switch.time  test_switch.py
examples/overhead_test/: branch.py  c_branch.c  setup.py  test.py  threading_test.py
examples/qr_factorization/: README.md  orig.testing_dgeqrf_mgpu.cpp  parla.sh  parla_source.sh  qr-Parla-GPU.py  qr-dask.py  qr-multiGPU.py  qr-multiprocess-smem-attempt.py  qr-numpy.py  qr-simple_blocked.py  qr_cupy.py  qr_multiprocess.py  qr_numpy.py  qr_parla.py  qr_parla_maybe_segfault.py  vec_segfault.py
examples/simple/: README.md
examples/sweeps/: README.md
examples/variants/: batched_cholesky.py
old_notes/: Gergo.md  Parla.md  Types.md
parla/: +  __init__.py  _cpuutils.py  array.py  contexts.py  cpu.py  cpu_impl.py  cpucores.py  cuda.py  dataflow.py  detail.py  device.py  environments.py  forwarding_modules.pyx  function_decorators.py  ldevice.py  loops.py  memory.py  multiload.py  partitioning.py  primitives.py  struct.py  task_collections.py  task_requirements.py  task_runtime.py  task_runtime_BACKUP_86667.py  task_states.py  tasks.py  test_task_runtime.py  tracking.py  typing.py  utils.py  vec_backtrace.c  vec_backtrace.h  vec_backtrace.pyx
reference_benchmarks/cholesky/: CMakeLists.txt  build.sh  cholesky_bench.pyx
reference_benchmarks/cholesky/cmake/: FindMagma.cmake  UseCython.cmake
reference_benchmarks/inner/: CMakeLists.txt  inner.cpp
runtime_libs/: CMakeLists.txt  Makefile  README  affinity_override.c  generate_stub_library.sh  log.c  log.h  preload_shim.h  stub_library.h  supervisor_wrappers.c  supervisor_wrappers.h  usingldso  virt_dlopen.c  virt_dlopen.h
tests/: README.md  conftest.py  test_automove.py  test_environments.py  test_examples.py  test_fine_grained_parray.py  test_gc.py  test_multiload.py  test_parray.py  test_partitioning.py  test_reduction.py  test_task_runtime.py  test_tasks.py
tutorial/: README.md
(+150 files in other folders)
