# 
# Copyright (c) 2019, NVIDIA CORPORATION.  All rights reserved.
# 
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#  - Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
#  - Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
#  - Neither the name(s) of the copyright holder(s) nor the names of its
#    contributors may be used to endorse or promote products derived
#    from this software without specific prior written permission.
# 
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR 
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# 

SET(EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE redistribute)
SET(EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE_SOURCES "${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE}.cu")

ADD_EXECUTABLE(${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE} ${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE_SOURCES})
TARGET_COMPILE_FEATURES(${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE} PUBLIC cxx_std_11)
SET_TARGET_PROPERTIES(${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE} PROPERTIES POSITION_INDEPENDENT_CODE ON)
SET_TARGET_PROPERTIES(${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE} PROPERTIES CUDA_SEPERABLE_COMPILATION ON)
TARGET_INCLUDE_DIRECTORIES(${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE} PUBLIC ${cudalibmg_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE} PUBLIC cudart cudalibmg)

INSTALL(TARGETS ${EXAMPLES_DEVICE_MATRIX_REDISTRIBUTE} DESTINATION bin)
